--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>@@Title@@ | Tagline</title>
+    <title>@@Title@@ | @@Tagline@@</title>
     <meta name="description" content="A github repository from Adam Draper - https://github.com/adamwdraper.">
     <meta name="author" content="">
 
@@ -33,33 +33,30 @@
         <div class="l qtr"></div>
         <div class="xl qtr"></div>
     </div>
-    <header class="cf">
-        <div class="full">
-            <div class="s-full half">
-                <span class="logo">@@Title@@</span> 
-                <span class="tagline">@@Tagline@@</span> 
+    <div class="sidebar qtr">
+        <div class="inner">
+            <h1 class="logo">
+                @@Title@@
+            </h1>
+            <p class="tagline">
+                @@Tagline@@
+            </p> 
+            <div id="nav" class="nav"></div>
+            <div class="github-links">
+                <a class="button" href="https://github.com/adamwdraper/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
+                <a class="button" href="https://github.com/adamwdraper/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
+                <a class="button" href="https://github.com/adamwdraper/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
+            </div>
+            <div class="footer">
+                <p>
+                    This is a project by <a href="http://github.com/adamwdraper">Adam Draper</a>
+                </p>
+                <iframe src="http://ghbtns.com/github-btn.html?user=adamwdraper&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
             </div>
         </div>
-    </header>
-    <div id="nav" class="nav">
-        <div class="links"></div>
-        <div class="github-links s-full half">
-            <a class="button" href="https://github.com/adamwdraper/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
-            <a class="button" href="https://github.com/adamwdraper/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
-            <a class="button" href="https://github.com/adamwdraper/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
-        </div>
     </div>
+    <div class="content over-qtr qtr3">
 
-
-
-
-
-
-    <footer class="full cf">
-        <p class="padding">
-            This is a project by <a href="https://github.com/adamwdraper">Adam Draper</a>
-        </p>
-    </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery/jquery-1.7.2.min.js"><\/script>')</script>
     <script src="js/site.js"></script>
