--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <script type="text/javascript">// make it safe to use console.log always
@@ -33,19 +34,19 @@
         <div class="l qtr"></div>
         <div class="xl qtr"></div>
     </div>
-    <div class="sidebar qtr">
+    <div class="sidebar qtr m-full s-full">
         <div class="inner">
             <h1 class="logo">
-                @@Title@@
+                Numeral.js
             </h1>
             <p class="tagline">
-                @@Tagline@@
+                A javascript library for formatting and manipulating numbers.
             </p> 
             <div id="nav" class="nav"></div>
             <div class="github-links">
                 <a class="button" href="https://github.com/adamwdraper/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
-                <a class="button" href="https://github.com/adamwdraper/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
-                <a class="button" href="https://github.com/adamwdraper/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
+                <a class="button download" href="https://github.com/adamwdraper/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
+                <a class="button download" href="https://github.com/adamwdraper/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
             </div>
             <div class="footer">
                 <p>
@@ -55,7 +56,269 @@
             </div>
         </div>
     </div>
-    <div class="content over-qtr qtr3">
+    <div class="content xl-over-qtr l-over-qtr qtr3 m-full s-full">
+        <div class="inner">
+
+
+
+
+        <h3>Use it</h3>
+        <h4>In the Browser</h4>
+<pre>
+&lt;script src=&quot;numeral-min.js&quot;&gt;&lt;/script&gt;
+</pre>
+<h4>In Node.js</h4>
+<pre>
+npm install numeral
+</pre>
+<pre>
+var numeral = require('numeral');
+</pre>
+
+        <h3>Format</h3>
+        <p>
+            Numbers can be formatted to look like money, percentages, times, or even plain old numbers with decimal places, comma delineated thousands, and abbreviations.
+        </p>
+<pre>
+var string = numeral(1000).format('0,000');
+// 1,000
+</pre>
+        <h4>Numbers</h4>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Format</th>
+                    <th>String</th>
+                </tr>
+            </thead>
+            <script type="text/javascript">
+                var nums = [
+                    10000,
+                    10000,
+                    -10000,
+                    10000.1234,
+                    -10000,
+                    -.23,
+                    -.23,
+                    .23,
+                    1230974,
+                    1460,
+                    -104000
+                ],
+                formats = [
+                    '0,000.0000',
+                    '0,000',
+                    '0,000.0',
+                    '0.000',
+                    '(0,000.0000)',
+                    '.00',
+                    '(.00)',
+                    '0.00000',
+                    '0.0a',
+                    '0a',
+                    '0a'
+                ];
+
+                for (var i = 0; i < nums.length; i++) {
+                    document.write('<tr><td>' + nums[i] + '</td><td>\'' + formats[i] + '\'</td><td>' + numeral(nums[i]).format(formats[i]) + '</td></tr>')
+                }
+            </script>
+        </table>
+        <h4>Money</h4>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Format</th>
+                    <th>String</th>
+                </tr>
+            </thead>
+            <script type="text/javascript">
+                nums = [
+                    1000.234,
+                    -1000.234,
+                    -1000.234,
+                    1230974
+                ],
+                formats = [
+                    '$0,000.00',
+                    '($0,000)',
+                    '$0,000.00',
+                    '($0.00a)'
+                ];
+
+                for (i = 0; i < nums.length; i++) {
+                    document.write('<tr><td>' + nums[i] + '</td><td>\'' + formats[i] + '\'</td><td>' + numeral(nums[i]).format(formats[i]) + '</td></tr>')
+                }
+            </script>
+        </table>
+        <h4>Percentages</h4>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Format</th>
+                    <th>String</th>
+                </tr>
+            </thead>
+            <script type="text/javascript">
+                var nums = [
+                    1,
+                    .974878234,
+                    -.43,
+                    -.43
+                ],
+                formats = [
+                    '0%',
+                    '0.000%',
+                    '0%',
+                    '(0.000%)'
+                ];
+
+                for (var i = 0; i < nums.length; i++) {
+                    document.write('<tr><td>' + nums[i] + '</td><td>\'' + formats[i] + '\'</td><td>' + numeral(nums[i]).format(formats[i]) + '</td></tr>')
+                }
+            </script>
+        </table>
+        <h4>Time</h4>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Format</th>
+                    <th>String</th>
+                </tr>
+            </thead>
+            <script type="text/javascript">
+                var nums = [
+                    25,
+                    238,
+                    63846
+                ],
+                formats = [
+                    '00:00:00',
+                    '00:00:00',
+                    '00:00:00'
+                ];
+
+                for (var i = 0; i < nums.length; i++) {
+                    document.write('<tr><td>' + nums[i] + '</td><td>\'' + formats[i] + '\'</td><td>' + numeral(nums[i]).format(formats[i]) + '</td></tr>')
+                }
+            </script>
+        </table>
+        <h3>Unformat</h3>
+        <p>
+            Got a formatted string?  Use the unformat function to make it useful again.
+        </p>
+<pre>
+var string = numeral().unformat('($10,000.00)');
+// -10000
+</pre>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>String</th>
+                    <th>Function</th>
+                    <th>Number</th>
+                </tr>
+            </thead>
+            <script type="text/javascript">
+                document.write('<tr><td>10,000.123</td><td>numeral().unformat(\'10,000.123\')</td><td>' + numeral().unformat('10,000.123') + '</td></tr>');
+                document.write('<tr><td>(0.12345)</td><td>numeral().unformat(\'(0.12345)\')</td><td>' + numeral().unformat('(0.12345)') + '</td></tr>');
+                document.write('<tr><td>($1.23m)</td><td>numeral().unformat(\'($1.23m)\')</td><td>' + numeral().unformat('($1.23m)') + '</td></tr>');
+                document.write('<tr><td>$10,000.00</td><td>numeral().unformat(\'$10,000.00\')</td><td>' + numeral().unformat('$10,000.00') + '</td></tr>');
+                document.write('<tr><td>-76%</td><td>numeral().unformat(\'-76%\')</td><td>' + numeral().unformat('-76%') + '</td></tr>');
+                document.write('<tr><td>2:23:57</td><td>numeral().unformat(\'2:23:57\')</td><td>' + numeral().unformat('2:23:57') + '</td></tr>');
+            </script>
+        </table>
+        <h3>Manipulate</h3>
+        <p>
+            Not that you will uses these often, but they're there when you need them.
+        </p>
+<pre>
+var number = numeral(1000);
+
+var added = number.add(10);
+// 1010
+</pre>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Before</th>
+                    <th>Function</th>
+                    <th>After</th>
+                </tr>
+            </thead>
+            <script type="text/javascript">
+                var num = numeral(1000);
+                document.write('<tr><td>' + num.format('0,000') + '</td><td>number.add(100)</td><td>' + num.add(100).format('0,000') + '</td></tr>');
+                document.write('<tr><td>' + num.format('0,000') + '</td><td>number.subtract(100)</td><td>' + num.subtract(100).format('0,000') + '</td></tr>');
+                document.write('<tr><td>' + num.format('0,000') + '</td><td>number.multiply(100)</td><td>' + num.multiply(100).format('0,000') + '</td></tr>');
+                document.write('<tr><td>' + num.format('0,000') + '</td><td>number.divide(100)</td><td>' + num.divide(100).format('0,000') + '</td></tr>');
+            </script>
+        </table>
+        <h3>Value</h3>
+        <p>
+            The value is always available.
+        </p>
+<pre>
+var number = numeral(1000);
+
+var string = number.format('0,000');
+// 1,000
+
+var value = number.value();
+// 1000
+</pre>
+        <h3>Set</h3>
+        <p>
+            Set the value of your numeral object.
+        </p>
+<pre>
+var number = numeral();
+
+number.set(1000);
+
+var value = number.value();
+// 1000
+</pre>
+        <h3>Clone</h3>
+        <p>
+            Go ahead and clone any numeral object while you're at it.
+        </p>
+<pre>
+var a = numeral(1000);
+var b = numeral(a);
+var c = a.clone();
+
+var aVal = a.set(2000).value();
+// 2000
+
+var bVal = b.value();
+// 1000
+
+var cVal = c.add(10).value();
+// 1010
+</pre>
+        <h3>Acknowlegements</h3>
+        <p>
+            Numeral.js, while less complex, was inspired by and heavily borrowed from <a href="http://momentjs.com/">Moment.js</a>
+        </p>
+
+
+        </div>
+    </div>
+
+    <div class="footer full">
+        <div class="inner">
+            <p>
+                This is a project by <a href="http://github.com/adamwdraper">Adam Draper</a>
+            </p>
+            <iframe src="http://ghbtns.com/github-btn.html?user=adamwdraper&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
+        </div>
+    </div>
+
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery/jquery-1.7.2.min.js"><\/script>')</script>
