update style, generic names

--- a/index.html
+++ b/index.html
@@ -28,13 +28,8 @@
 </head>
 <body class="cf">
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-    <div class="screens full">
-        <div class="s qtr"></div>
-        <div class="m qtr"></div>
-        <div class="l qtr"></div>
-        <div class="xl qtr"></div>
-    </div>
-    <div class="sidebar qtr m-full s-full">
+    <div class="header-bar full"></div>
+    <div class="sidebar thrd m-full s-full">
         <div class="inner">
             <h1 class="logo">
                 @@Title@@
@@ -50,14 +45,16 @@
             </div>
             <div class="footer">
                 <p>
-                    This is a project by <a href="http://github.com/adamwdraper">Adam Draper</a>
+                    This is a project by <a href="http://github.com/username">Name Here</a>
                 </p>
-                <iframe src="http://ghbtns.com/github-btn.html?user=adamwdraper&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
+                <iframe src="http://ghbtns.com/github-btn.html?user=username&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
             </div>
         </div>
     </div>
-    <div class="content xl-over-qtr l-over-qtr qtr3 m-full s-full">
+    <div class="content xl-over-thrd l-over-thrd thrd2 m-full s-full">
         <div class="inner">
+
+
 
         </div>
     </div>
@@ -65,9 +62,9 @@
     <div class="footer full">
         <div class="inner">
             <p>
-                This is a project by <a href="http://github.com/adamwdraper">Adam Draper</a>
+                This is a project by <a href="http://github.com/username">Name Here</a>
             </p>
-            <iframe src="http://ghbtns.com/github-btn.html?user=adamwdraper&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
+            <iframe src="http://ghbtns.com/github-btn.html?user=username&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
         </div>
     </div>
 
