--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>@@Title@@ | @@Tagline@@</title>
-    <meta name="description" content="A github repository from Adam Draper - https://github.com/adamwdraper.">
+    <meta name="description" content="A github repository from Username - https://github.com/Username">
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -18,11 +18,6 @@
 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
-    <script type="text/javascript">// make it safe to use console.log always
-    (function(a){function b(){}for(var c="assert,count,debug,dir,dirxml,error,exception,group,groupCollapsed,groupEnd,info,log,markTimeline,profile,profileEnd,time,timeEnd,trace,warn".split(","),d;!!(d=c.pop());){a[d]=a[d]||b;}})
-    (function(){try{console.log();return window.console;}catch(a){return (window.console={});}}());
-    </script>
 
     <script src="js/respond-min.js"></script>
 </head>
