update responcss, fix footer padding on xl, make sidebar scroll auto

--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
             </h1>
             <p class="tagline">
                 @@Tagline@@
-            </p> 
-            <div id="nav" class="nav"></div>
+            </p>
+            <p>
+                v 0.0.1
+            </p>
             <div class="github-links">
                 <a class="button" href="https://github.com/@@username@@/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
                 <a class="button download" href="https://github.com/@@username@@/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
                 <a class="button download" href="https://github.com/@@username@@/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
+            </div>
+            <div id="nav" class="nav">
             </div>
         </div>
     </div>
