add styles structure for scss, move theme to style.scss so individual tweaks can be made, but easy updating is still possible

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
-    <script src="js/respond-min.js"></script>
     
+    <script src="js/build/site-min.js"></script>
+
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -50,9 +49,9 @@
                 v 0.0.1
             </p>
             <div class="github-links">
-                <a class="button" href="https://github.com/@@username@@/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
-                <a class="button download" href="https://github.com/@@username@@/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
-                <a class="button download" href="https://github.com/@@username@@/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
+                <a class="button flat" href="https://github.com/@@username@@/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
+                <a class="button flat download" href="https://github.com/@@username@@/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
+                <a class="button flat download" href="https://github.com/@@username@@/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
             </div>
             <div id="nav" class="nav">
             </div>
@@ -75,6 +74,5 @@
         </div>
     </div>
 
-    <script src="js/build/site-min.js"></script>
 </body>
 </html>
