upgrade styles, reformat file structure

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 v 0.0.1
             </p>
             <div class="github-links">
-                <a class="button flat" href="https://github.com/@@username@@/@@Title@@"><i aria-hidden="true" class="i-github"></i> Github</a>
-                <a class="button flat download" href="https://github.com/@@username@@/@@Title@@/zipball/master"><i aria-hidden="true" class="i-install"></i> .ZIP</a>
-                <a class="button flat download" href="https://github.com/@@username@@/@@Title@@/tarball/master"><i aria-hidden="true" class="i-install"></i> .TGZ</a>
+                <a class="button flat" href="https://github.com/@@username@@/@@Title@@"><i aria-hidden="true" class="icon-github"></i> Github</a>
+                <a class="button flat download" href="https://github.com/@@username@@/@@Title@@/zipball/master"><i aria-hidden="true" class="icon-download"></i> .ZIP</a>
+                <a class="button flat download" href="https://github.com/@@username@@/@@Title@@/tarball/master"><i aria-hidden="true" class="icon-download"></i> .TGZ</a>
             </div>
             <div id="nav" class="nav">
             </div>
@@ -70,7 +70,6 @@
             <p>
                 This is a project by <a href="http://github.com/@@username@@">Name Here</a>
             </p>
-            <iframe src="http://ghbtns.com/github-btn.html?user=@@username@@&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="20px"></iframe>
         </div>
     </div>
 
