make sure footer doesn't conflict with other footers

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="footer l-thrd xl-thrd full">
         <div class="inner">
             <p>
-                This is a project by <a href="http://github.com/@@username@@">Name Here</a>
+                This is a project by <a href="http://github.com/@@username@@">@@username@@</a>
             </p>
         </div>
     </div>
